package bridge;

public interface CanalEnvio {
    boolean enviar(String conteudo);
}
